add arm6 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,9 @@ if (PEPPER)
   set(BELA on)
 endif (PEPPER)
 
+if (${CMAKE_SYSTEM_PROCESSOR} MATCHES "^armv6l")
+    set(ARM6 on)
+endif() 
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "Processor: ${CMAKE_SYSTEM_PROCESSOR}")
@@ -49,8 +52,8 @@ if (NOT DEFINED CPU_OPTIMIZATION_FLAGS)
                 endif(PEPPER) 
 
                 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/xenomai/include/cobalt -I/usr/xenomai/include -march=armv7-a -D_GNU_SOURCE -D_REENTRANT -D__COBALT__")
-        	    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv7-a -mtune=cortex-a8 -mfloat-abi=hard -mfpu=neon -ftree-vectorize")
-        	    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBELA")
+                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv7-a -mtune=cortex-a8 -mfloat-abi=hard -mfpu=neon -ftree-vectorize")
+                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBELA")
                     #  /usr/xenomai/bin/xeno-config --skin=cobalt --no-auto-init --no-mode-check --ldflags
                 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
                     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math")
@@ -63,11 +66,15 @@ if (NOT DEFINED CPU_OPTIMIZATION_FLAGS)
                 set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${BELA_LINK_FLAGS}")
                 set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${BELA_LINK_FLAGS}")
                 #set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} ${BELA_LINK_FLAGS} ")
+            elseif (ARM6)
+                message(STATUS "arm6 build")
+                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv6+fp -mfpu=vfp -mfloat-abi=hard")
             else ()
+                message(STATUS "arm7 build")
                 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv7-a -mfpu=neon -mfloat-abi=hard")
-            endif ()
+            endif ()        
         else ()
-            #        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Wall")
+                # set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Wall")
         endif ()
     endif ()
 else()
