reduce queue size a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,9 @@ set(EL_VERSION "${EL_VERSION_MAJOR}.${EL_VERSION_MINOR}.${EL_VERSION_UPDATE}")
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Darwin") 
     set(EXECUTABLE_NAME ElectraLite)
-    if(NOT CMAKE_OSX_ARCHITECTURES) 
-        set(CMAKE_OSX_ARCHITECTURES "x86_64")
+    if(NOT CMAKE_OSX_ARCHITECTURES)
+        set(CMAKE_OSX_ARCHITECTURES "arm64")
+#        set(CMAKE_OSX_ARCHITECTURES "x86_64")
     endif()
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set(EXECUTABLE_NAME electralite)
